<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster_img"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_100dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:adjustViewBounds="true"
            android:importantForAccessibility="no"
            android:src="@drawable/default_movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_32dp"
            android:maxLines="3"
            android:text="@string/title_unavailable"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_poster_img" />

        <TextView
            android:id="@+id/tv_plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/description_unavailable"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_released_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/released_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_plot" />

        <TextView
            android:id="@+id/tv_released_content"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_3dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:text="@string/default_content_unavailable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_released_title"
            app:layout_constraintTop_toTopOf="@id/tv_released_title" />

        <TextView
            android:id="@+id/tv_cast_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/cast_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_released_content" />

        <TextView
            android:id="@+id/tv_cast_content"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_3dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:text="@string/default_content_unavailable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_cast_title"
            app:layout_constraintTop_toTopOf="@id/tv_cast_title" />

        <TextView
            android:id="@+id/tv_director_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/director_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cast_content" />

        <TextView
            android:id="@+id/tv_director_content"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_3dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:text="@string/default_content_unavailable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_director_title"
            app:layout_constraintTop_toTopOf="@id/tv_director_title" />

        <TextView
            android:id="@+id/tv_writers_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/Writers_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_director_content" />

        <TextView
            android:id="@+id/tv_writers_content"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_3dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:text="@string/default_content_unavailable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_writers_title"
            app:layout_constraintTop_toTopOf="@id/tv_writers_title" />

        <TextView
            android:id="@+id/tv_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/type_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_writers_content" />

        <TextView
            android:id="@+id/tv_type_content"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_3dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:text="@string/default_content_unavailable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_type_title"
            app:layout_constraintTop_toTopOf="@id/tv_type_title" />

        <TextView
            android:id="@+id/tv_ratings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/imdb_rating_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_type_content" />

        <TextView
            android:id="@+id/tv_ratings_content"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_3dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:text="@string/default_content_unavailable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_ratings_title"
            app:layout_constraintTop_toTopOf="@id/tv_ratings_title" />

        <TextView
            android:id="@+id/tv_favourite_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/favourite_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ratings_content" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@id/tv_favourite_title"
            app:layout_constraintStart_toEndOf="@id/tv_favourite_title"
            app:layout_constraintTop_toTopOf="@id/tv_favourite_title" />

        <TextView
            android:id="@+id/tv_watched_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/watched_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_favourite" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_watched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@id/tv_watched_title"
            app:layout_constraintStart_toEndOf="@id/tv_watched_title"
            app:layout_constraintTop_toTopOf="@id/tv_watched_title" />

        <TextView
            android:id="@+id/tv_recommended_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/reccomended_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_watched" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_recommended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:layout_constraintBottom_toBottomOf="@id/tv_recommended_title"
            app:layout_constraintStart_toEndOf="@id/tv_recommended_title"
            app:layout_constraintTop_toTopOf="@id/tv_recommended_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>